--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
           </div>
           <div class="column">
            <p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking with ICMP + Packet Size</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>   
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>  
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-mangle-script-obfuscator.html"><s>Mangle Chain Obfuscator / Encryption</s></a><img alt="member-only" class="member-only" src="./img/user.png"></p> 		   
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ ROUTER-OS OTHER TOOLS</span></div>
