--- a/mikrotik-mangle-script-obfuscator.html
+++ b/mikrotik-mangle-script-obfuscator.html
@@ -203,7 +203,7 @@
           <center><span style="hight:100%; width:100%; background-color:red; color:#fff; font-size:15px;padding:5px; font-weight:bold;" id="showlock">CODE LOCKED, SORRY NOT FOR PUBLICATION</span></center>
           <br>
           <div id="lock-code">
-            <span style="color:#ff6600;">
+            <span style="color:#ff6600;display:none">
             ###############################################<br>
             # Mikrotik Firewall Mangle Chain Obfuscator / Encryption<br>
             # Date/Time: <span id="tanggalwaktu"></span><br>
