--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <br>
         <div class="footer">
           <div class="disclaimer">
-            <span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #f60; border-right:6px solid #f60; color:#f60;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (December, 2022)</i></span> 
+            <span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #f60; border-right:6px solid #f60; color:#f60;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:0px "></span> 
               We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
           </div>
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
