--- a/mikrotik/domain-list-bank-indonesia.html
+++ b/mikrotik/domain-list-bank-indonesia.html
@@ -16,7 +16,8 @@
 <div id="hidelink"></div>
 <h1>Domain List for Indonesia Bank - Mikrotik Script RouterOS</h1>
 <pre>Complete Domain List for Indonesia Bank / Host Indonesia Bank
-<code class="routeros">ip firewall address-list
+
+<code class="routeros">/ip firewall address-list
 add list=bank-indonesia address=www.bri.co.id
 add list=bank-indonesia address=www.bankmandiri.co.id
 add list=bank-indonesia address=www.bni.co.id
