--- a/login/maintenance.html
+++ b/login/maintenance.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 body {
 
-	background:#1C1C1C;
+	background:#F5D810;
 }
 .center {
   display: block;
@@ -19,7 +19,7 @@ body {
 
 <body>
 
-<img src="maintenance.avif" width="auto" height="auto" class="center"/>
+<img src="maintenance.png" class="center"/>
 
 </body>
 </html>
