--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -959,6 +959,16 @@
             </tr>
             <tr>
               <td>
+                <p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/ip-address-list-indonesia-ipv4.html" onclick="getcontent(this); return truefalseFunction(x);">IP Address List Indonesia IPv4</a></p>
+              </td>
+            </tr>		
+            <tr>
+              <td>
+                <p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/ip-address-list-indonesia-ipv6.html" onclick="getcontent(this); return truefalseFunction(x);">IP Address List Indonesia IPv6</a></p>
+              </td>
+            </tr>			
+            <tr>
+              <td>
                 <p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/Include-custom-function-in-another-script.html" onclick="getcontent(this); return truefalseFunction(x);">Include custom function in another script</a></p>
               </td>
             </tr>
