--- a/mikrotik/ip-address-list-indonesia-ipv4.html
+++ b/mikrotik/ip-address-list-indonesia-ipv4.html
@@ -19,8 +19,7 @@
 <h1>IP Address List Indonesia IPv4 - Mikrotik Script RouterOS</h1><pre>
 Complete IP Address List for Indonesia IPv4
 
-<code class="routeros">
-add address=2.255.251.216/32 list="Indonesia-ipv4"
+<code class="routeros">add address=2.255.251.216/32 list="Indonesia-ipv4"
 add address=3.2.33.128/26 list="Indonesia-ipv4"
 add address=3.5.36.0/22 list="Indonesia-ipv4"
 add address=8.18.195.0/24 list="Indonesia-ipv4"
