--- a/mikrotik/ip-address-list-indonesia-ipv6.html
+++ b/mikrotik/ip-address-list-indonesia-ipv6.html
@@ -19,8 +19,7 @@
 <h1>IP Address List Indonesia IPv6 - Mikrotik Script RouterOS</h1><pre>
 Complete IP Address List for Indonesia IPv6
 
-<code class="routeros">
-add address=::FFFF:2.255.251.216/128 list="Indonesia-ipv6"
+<code class="routeros">add address=::FFFF:2.255.251.216/128 list="Indonesia-ipv6"
 add address=::FFFF:3.2.33.128/122 list="Indonesia-ipv6"
 add address=::FFFF:3.5.36.0/118 list="Indonesia-ipv6"
 add address=::FFFF:8.18.195.0/120 list="Indonesia-ipv6"
