--- a/mikrotik-dhcp-rogue.html
+++ b/mikrotik-dhcp-rogue.html
@@ -145,16 +145,16 @@
         <div class="class-input">
           <div style="width:100%;margin-right:10px">
             <label><b>DHCP Interface / Bridge</b></label><br>
-            <input type="text" id="input-interface" value="bridge1" placeholder="ether1 or Bridge">
+            <input type="text" id="input-interface" value="" placeholder="ether1 or Bridge">
           </div>
           <div style="width:100%;margin-right:10px;">
             <label><b>Valid MAC Interface</b></label><br>
-            <input type="text" id="input-mac" value="48:8F:5A:66:DF:86" placeholder="XX:XX:XX:XX:XX:XX">
+            <input type="text" id="input-mac" value="XX:XX:XX:XX:XX:XX" placeholder="XX:XX:XX:XX:XX:XX">
           </div>
           <div style="width:100%;">
             <label><b>Alert Timeout</b></label><br>
             <span style="display:flex">
-            <input onkeypress="return event.charCode != 32" style="width:100%;margin-right:2px" type="text" id="input-alert-timeout" value="00:05:00" placeholder="00:05:00">
+            <input onkeypress="return event.charCode != 32" style="width:100%;margin-right:2px" type="text" id="input-alert-timeout" value="00:01:00" placeholder="00:01:00">
             </span>
           </div>
         </div>
