--- a/mikrotik-dhcp-rogue.html
+++ b/mikrotik-dhcp-rogue.html
@@ -149,7 +149,7 @@
           </div>
           <div style="width:100%;margin-right:10px;">
             <label><b>Valid MAC Interface</b></label><br>
-            <input type="text" id="input-mac" value="XX:XX:XX:XX:XX:XX" placeholder="XX:XX:XX:XX:XX:XX">
+            <input type="text" id="input-mac" value="" placeholder="XX:XX:XX:XX:XX:XX">
           </div>
           <div style="width:100%;">
             <label><b>Alert Timeout</b></label><br>
