--- a/mikrotik-dhcp-rogue.html
+++ b/mikrotik-dhcp-rogue.html
@@ -165,7 +165,7 @@
               <option value="01">Telegram</option>
               <option value="02">E-Mail</option>
               <option value="03">SMS</option>
-              <option value="04">Log Message</option>
+              <option value="04">Log Message Only</option>
             </select>
           </div>
           <div id="telegram" style="width:50%;margin-right:10px">
