--- a/index.html
+++ b/index.html
@@ -251,7 +251,6 @@
            <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote Access ISP "Public IP Static"</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Games</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-		   <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dhcp-rogue.html">Discover Unknown DHCP Rogue Server</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
@@ -281,7 +280,7 @@
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">Expired Notification Hotspot + PPPoE</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
         </div>
-        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE</span></div>
+        <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ DNS <span style="color:#ff6600">//</span> NETWATCH <span style="color:#ff6600">//</span> INTERFACE <span style="color:#ff6600">//</span> DHCP</span></div>
         <div class="row">
           <div class="column">
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dns-over-https-doh.html">DNS over HTTPS (DoH) Servers</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
@@ -289,6 +288,7 @@
           </div>
           <div class="column">
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+		   <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-dhcp-rogue.html">Discover Unknown DHCP Rogue Server</a><img alt="member-only" class="member-only" src="./img/user.png"></p>		   
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ PROTECTION <span style="color:#ff6600">//</span> BACKUP</span></div>
