--- a/mikrotik-dhcp-rogue.html
+++ b/mikrotik-dhcp-rogue.html
@@ -193,7 +193,7 @@
             <input type="text" id="sms-port" placeholder="usb1" value="">
           </div>
           <div id="e-mail" style="width:50%; margin-right:10px; display:none">
-            <label><b>Send to E-mail</b></label> 
+            <label><b>Your E-mail</b></label> 
             <input  type="text" id="bot-email" placeholder="your-mail@gmail.com" value="">
           </div>
           <div id="routeros" style="width:50%; display:none">
