--- a/mikrotik-dhcp-rogue.html
+++ b/mikrotik-dhcp-rogue.html
@@ -208,7 +208,7 @@
         <div style="border-bottom:1px solid #bbb; margin-top:2px;"></div>
         <div style="margin-top:20px"></div>
         <button style="margin-top:-5px" type="button" onclick="submit()">Generate</button> 
-        <button style="margin-top:-5px" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 
+        <button style="margin-top:-5px" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> Copy-Paste Script to Terminal.
         <div class="list-output-content">
           <div id="list-output-r1">
             <span style="color:#ff6600;">
