--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -194,7 +194,7 @@
           <br>
         </div>
         <div class="content">
-          <span style="margin-left:2px;font-weight:600">Script Generator Results</span>
+          <span style="margin-left:2px;font-weight:600">Copy-Paste Script to Terminal</span>
           <div class="list-output-content">
             <table id="showScript" style="padding:5px;">
               <tr>
