--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -205,7 +205,7 @@
             /system ntp client servers add address=<span style="color:#ff6600;">asia.pool.ntp.org</span><br>
           </div>
         </div>
-        <button style="margin-top:15px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 		  
+        <button style="margin-top:15px;margin-right:10px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button>  <b>Copy-Paste Script to Terminal</div>		  
       </div>
       <div class="footer">
         © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
