--- a/vpn-remote-generator.html
+++ b/vpn-remote-generator.html
@@ -181,11 +181,11 @@
                   ###################################################################<br>
                   # VPN Remote SSTP - L2TP - PPTP - OVPN Mikrotik Generator<br>
                   # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
-                  # VPN Type -> <span id="vpn-list-text-info" style="font-weight:600;text-transform: uppercase">PPTP</span><br>
+                  # VPN Protokol -> <span id="vpn-list-text-info" style="font-weight:600;text-transform: uppercase">PPTP</span><br>
                   ###################################################################<br>
                   </span>
                   <span style="font-weight:600">/interface <span id="vpn-list-text" style="color:#ff6600; font-weight:600" >pptp</span>-client</span><br>
-                  add connect-to="<span id="vpn-ip-text" style="color:#ff6600; font-weight:600">x.x.x.x</span>" disabled=no name="<span id="vpn-name-text1" style="color:#ff6600; font-weight:600">VPN-REMOTE</span>" user="<span id="vpn-username-text" style="color:#ff6600; font-weight:600" >xxxxxx</span>" password="<span id="vpn-password-text" style="color:#ff6600; font-weight:600">xxxxxx</span>" comment="<span id="vpn-name-text4">VPN Remote by buananetpbun.github.io</span>"<br>
+                  add coennect-to="<span id="vpn-ip-text" style="color:#ff6600; font-weight:600">x.x.x.x</span>" disabled=no name="<span id="vpn-name-text1" style="color:#ff6600; font-weight:600">VPN-REMOTE</span>" user="<span id="vpn-username-text" style="color:#ff6600; font-weight:600" >xxxxxx</span>" password="<span id="vpn-password-text" style="color:#ff6600; font-weight:600">xxxxxx</span>" comment="<span id="vpn-name-text4">VPN Remote by buananetpbun.github.io</span>"<br>
             </div>
           </div>
           <br>
