--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
         </div>
         <h2>MIKROTIK ROUTEROS GENERATOR TOOLS</h2>
-        <span style="font-size:16px;font-weight:600;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT</span>
+        <span style="font-size:16px;font-weight:600;">☰ ROUTE <span style="color:#ff6600">//</span> MANGLE <span style="color:#ff6600">//</span> NAT <span style="color:#ff6600">//</span> VPN</span>
         <div class="row">
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
