--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -498,7 +498,7 @@
                 # Vpn Game Script Generator By BuanaNETPBun.Github.io<br>
                 # Date/Time: <span id="tanggalwaktu"></span><br>
                 # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
-                # VPN Type -> <span id="vpn-list-text-info" style="font-weight:600;text-transform: uppercase">PPTP</span><br>
+                # VPN Protocol -> <span id="vpn-list-text-info" style="font-weight:600;text-transform: uppercase">PPTP</span><br>
                 ######################################################<br>
                 </span>
                 <span style="font-weight:600">/interface <span id="vpn-list-text">pptp</span>-client</span><br>
