--- a/vpn-game-generator2.html
+++ b/vpn-game-generator2.html
@@ -490,7 +490,7 @@
                   # Vpn Game Script Generator By BuanaNETPBun.Github.io<br>
                   # Date/Time: <span id="tanggalwaktu"></span><br>
                   # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
-                  # Type VPN -> <span id="vpn-list-text-info" style="font-weight:bold;text-transform: uppercase">PPTP</span><br>
+                  # VPN Protocol -> <span id="vpn-list-text-info" style="font-weight:bold;text-transform: uppercase">PPTP</span><br>
                   ######################################################<br>
                   </span>
                   <span style="font-weight:bold">/interface <span id="vpn-list-text">pptp</span>-client</span><br>
