--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -182,7 +182,7 @@
                   # VPN Tunnel All Traffic Script Generator By BuanaNETPBun.Github.io<br>
                   # Date/Time: <span id="tanggalwaktu"></span><br>
                   # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
-                  # VPN Type -> <span id="vpn-list-text-info" style="font-weight:600;text-transform: uppercase">PPTP</span><br>
+                  # VPN Protocol -> <span id="vpn-list-text-info" style="font-weight:600;text-transform: uppercase">PPTP</span><br>
                   ###################################################################<br>
                   </span>
                   <span style="font-weight:600">/interface <span id="vpn-list-text" style="color:#ff6600; font-weight:600" >pptp</span>-client</span><br>
